Cleaup & update settings a bit